--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-# SPP Metric Automation Requirements
+# SPP Metric Automation Tool Enhanced - Requirements
 
-# Install required packages
-pip install pandas
-pip install snowflake-connector-python
-pip install openpyxl
-pip install xlwings
+# Core dependencies
+pandas>=1.5.0
+snowflake-connector-python>=3.0.0
+openpyxl>=3.1.0
+
+# Optional dependencies for enhanced features
+xlsxwriter>=3.0.0
+pillow>=9.0.0
+requests>=2.28.0
+
+# Development and testing
+pytest>=7.0.0
+black>=22.0.0
+flake8>=5.0.0
