--- a/SPP_Enhanced_v2.0_Team_Deployment/template_config.json
+++ b/SPP_Enhanced_v2.0_Team_Deployment/template_config.json
@@ -1,12 +1,12 @@
 {
-  "template_path": "C:/Users/1015723/OneDrive - HD Supply, Inc/Documents/Cole - Multi-Query information and template/Simplified Macro Template - SPP Monthly Details.xlsm",
-  "use_template": true,
+  "template_path": "",
+  "use_template": false,
   "template_name": "SPP_Template.xlsm",
-  "output_format": "xlsm",
+  "output_format": "xlsx",
   "search_paths": [
     "C:\\\\Users\\\\%USERNAME%\\\\OneDrive\\\\Documents",
     "C:\\\\Users\\\\%USERNAME%\\\\Documents",
     "."
   ],
-  "last_updated": "2025-08-19T14:46:47.086553"
+  "last_updated": "2025-10-23T14:35:25.407834"
 }
